//
//  ToDosUITests.swift
//  ToDosUITests
//
//  Created by Iurii Chernovalov on 08.06.21.
//

import XCTest

class ToDosUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testAddCategory() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        app.navigationBars.buttons["Add"].tap()
        app.alerts.textFields["Create new Category"].tap()
        app.alerts.textFields["Create new Category"].typeText("NewCategory")
        app.alerts.scrollViews.otherElements.buttons["Ok"].tap()
        
        XCTAssert(app.cells.staticTexts["NewCategory"].exists)
        
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
